# mocktopus

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  Makefile  README.md  pyproject.toml  requirements_lock.txt  test_manual.py
.github/: actionlint.yaml
.github/workflows/: bazel-rbe.yml  ci.yml
scripts/: run-bazel-rbe.sh
src/mocktopus/: __init__.py  cli.py  core.py  server.py
tests/: pytest_main.py  test_basic.py  test_bazel_workflow_contract.py  test_integration.py  test_server.py
